# presuplano_backend

./: .gitignore  CHANGELOG.md  DEPLOY.md  README.md  manage.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
src/: conftest.py  manage.py
src/api/: urls.py  views.py
src/api/tests/: test_health.py
src/apps/accounts/: admin.py  apps.py  managers.py  models.py  serializers.py  services.py  urls.py  views.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/accounts/tests/: factories.py  test_login.py  test_refresh.py  test_registration.py  test_verify_otp.py
src/apps/catalog/: admin.py  apps.py  models.py  selectors.py  serializers.py  urls.py  views.py
src/apps/catalog/migrations/: 0001_initial.py
src/apps/catalog/tests/: factories.py  test_tariffs.py
src/apps/clients/: admin.py  apps.py  models.py  selectors.py  serializers.py  urls.py  views.py
src/apps/clients/migrations/: 0001_initial.py
src/apps/clients/tests/: factories.py  test_clients.py
src/apps/payments/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
src/apps/payments/migrations/: 0001_initial.py
src/apps/projects/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
src/apps/quotes/: admin.py  apps.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
src/common/: models.py  uploads.py
src/core/: .env.example  asgi.py  env.py  logging_config.py  settings.py  settings_storages.py  urls.py  wsgi.py
(+7 files in other folders)
