[project]
name = "presuplano-backend"
version = "0.1.0"
description = "presuplano — cotizador multi-tenant para arquitectos (backend API)"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.15,<3.17",
    "djangorestframework-simplejwt>=5.3,<6",
    "django-cors-headers>=4.4,<5",
    "django-environ>=0.11,<0.13",
    "django-filter>=24.3,<26",
    "psycopg[binary]>=3.2,<4",
    "pillow>=10.4,<12",
]

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-django>=4.9,<5",
    "pytest-cov>=5.0,<7",
    "pytest-mock>=3.14,<4",
    "factory-boy>=3.3,<4",
    "ruff>=0.6,<1",
]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "DJ", "S", "LOG", "G"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "common", "core", "api"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "S105", "S106", "S107"]
"**/test_*.py" = ["S101", "S105", "S106", "S107"]
"**/migrations/**" = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
pythonpath = ["src"]
python_files = ["test_*.py", "tests.py"]
addopts = "--reuse-db"
testpaths = ["src"]
